--- a/style.css
+++ b/style.css
@@ -17,6 +17,20 @@
   background-color: orange;
 }
 
+.main {
+  width: 960px;
+  height: 1400px;
+  background-color: lightgreen;
+  margin: 0 auto;
+}
+
+.main-inner {
+  width: 500px;
+  height: 1400px;
+  background-color: limegreen;
+  margin: 0 auto;
+}
+
 .footer {
   width: 100%;
   height: 100px;
